change work img

--- a/index.html
+++ b/index.html
@@ -43,111 +43,75 @@
           <h2 class="text-center">Works</h2>
           <div class="works-box">
              <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/img_work_snow.jpg" alt="キッズモデルあんじゅちゃん 雪">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>株式会社きらめき コーポレートサイト</h3>
-                        <small>2016.04.20</small>
-                        <span class="button-readmore">Read More</span>
+                        <h3>長野県 キッズポートレイト</h3>
+                        <small>2016.02.20</small>
+                        <span class="button-readmore">And More</span>
                     </div>
                 </div>
              </a>
           </div>
           <div class="works-box">
              <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき花子様 名刺デザイン">
+                <img src="./images/img_work_strawberry2.jpg" alt="キッズモデルあんじゅちゃん いちご">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>きらめき花子様 名刺</h3>
-                        <small>2016.04.20</small>
-                        <span class="button-readmore">Read More</span>
+                        <h3>福岡県 キッズポートレイト</h3>
+                        <small>2016.04.1</small>
+                        <span class="button-readmore">And More</span>
                     </div>
                 </div>
              </a>
           </div>
           <div class="works-box">
              <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/img_work_leaf.jpg" alt="キッズモデルあんじゅちゃん 紅葉">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>ブログデザイン</h3>
-                        <small>2016.04.20</small>
-                        <span class="button-readmore">Read More</span>
+                        <h3>京都府 キッズポートレイト</h3>
+                        <small>2016.11.25</small>
+                        <span class="button-readmore">And More</span>
                     </div>
                 </div>
              </a>
           </div>
           <div class="works-box">
              <a href="#">
-                <img src="./images/img_work_card.jpg" alt="きらめき花子様 名刺デザイン">
+                <img src="./images/img_work_icecream.jpg" alt="キッズモデルあんじゅちゃん アイスクリーム">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>きらめき花子様 名刺</h3>
-                        <small>2016.04.20</small>
-                        <span class="button-readmore">Read More</span>
+                        <h3>兵庫県 キッズポートレイト</h3>
+                        <small>2016.08.10</small>
+                        <span class="button-readmore">And More</span>
                     </div>
                 </div>
              </a>
           </div>
           <div class="works-box">
              <a href="#">
-                <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+                <img src="./images/img_work_point.jpg" alt="キッズモデルあんじゅちゃん 指さし">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>ブログデザイン</h3>
-                        <small>2016.04.20</small>
-                        <span class="button-readmore">Read More</span>
+                        <h3>奈良県 キッズポートレイト</h3>
+                        <small>2016.04.3</small>
+                        <span class="button-readmore">And More</span>
                     </div>
                 </div>
              </a>
           </div>
            <div class="works-box">
              <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/img_work_present.jpg" alt="キッズモデルあんじゅちゃん プレゼント">
                 <div class="works-box-inner">
                     <div class="text-center">
-                        <h3>株式会社きらめき コーポレートサイト</h3>
-                        <small>2016.04.20</small>
-                        <span class="button-readmore">Read More</span>
+                        <h3>奈良県 キッズポートレイト</h3>
+                        <small>2016.04.3</small>
+                        <span class="button-readmore">And More</span>
                     </div>
                 </div>
             </a>
-          </div>
-          <div class="works-box">
-             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
-                <div class="works-box-inner">
-                    <div class="text-center">
-                        <h3>株式会社きらめき コーポレートサイト</h3>
-                        <small>2016.04.20</small>
-                        <span class="button-readmore">Read More</span>
-                    </div>
-                </div>
-             </a>
-          </div>
-          <div class="works-box">
-             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
-                <div class="works-box-inner">
-                    <div class="text-center">
-                        <h3>株式会社きらめき コーポレートサイト</h3>
-                        <small>2016.04.20</small>
-                        <span class="button-readmore">Read More</span>
-                    </div>
-                </div>
-             </a>
-          </div>
-          <div class="works-box">
-             <a href="#">
-                <img src="./images/img_work_site.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
-                <div class="works-box-inner">
-                    <div class="text-center">
-                        <h3>株式会社きらめき コーポレートサイト</h3>
-                        <small>2016.04.20</small>
-                        <span class="button-readmore">Read More</span>
-                    </div>
-                </div>
-             </a>
           </div>
        </section>
          <section id="contact">
