--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
              <ul>
                <li><a href="mailto:takigawa0221@gmail.com"><i aria-label="メール" class="contact_mail fa fa-envelope-o"></i></a></li>
                <li class="github"><a href="https://github.com/takigawarikako"><i aria-label="GitHub" class="fa fa-github"></i></a></li>
-               <li class="twitter"><a href="https://twitter.com/chanriicamera"><i class="contact_twitter fa fa-twitter" aria-hidden="true"></i></a></i>
+               <li class="twitter"><a href="https://twitter.com/chanriicamera"><i class="contact_twitter fa fa-twitter" aria-hidden="true"></i></a></li>
              </ul>
          </section>
         </main>
